tests/parser/parse-unless.1.bad.coalton
;; BAD: Parse Unless
(package test-package)

(define x (unless))
